assets/scss/molecules/forms/_custom-checkbox.scss
.checkbox-item {
    cursor: pointer;
    font-size: 1.6rem;
    user-select: none;
    position: relative;
    padding-right: 16px;
    font-weight: $regular;

    @include breakpoint(large down) {
        padding: 15px 20px 15px 0;
        border-bottom: 1px solid rgba($black, 0.10);
    }

    &:not(.displays-inline) {
        display: block;
        padding-right: 30px;
    }

    input {
        top: 50%;
        right: 0;
        opacity: 0;
        width: 16px;
        height: 16px;
        cursor: pointer;
        position: absolute;
        transform: translateY(-50%);

        &:checked + .checkmark:after {
            display: block;
        }
    }

    html[data-whatinput="keyboard"] & {
        input {
            &:focus + .checkmark {
                outline: 1px dotted #212121;
                outline: 5px auto -webkit-focus-ring-color;
            }
        }
    }

    // Don't trigger hover on tap on iOS
    @media (hover: hover) and (pointer: fine), (-ms-high-contrast: none), (-ms-high-contrast: active) {
        &:hover {
            .checkmark {
                border-color: $red-2;
            }
        }
    }

    .checkmark {
        top: 50%;
        right: 0;
        width: 16px;
        height: 16px;
        position: absolute;
        border: 2px solid $red-5;
        transform: translateY(-50%);

        &:after {
            content: "";
            width: 16px;
            height: 16px;
            display: none;
            position: absolute;
            background: url('#{$image-path}/icon-check.svg');
            background-repeat: no-repeat;
        }
    }

    &.radio {
        // Don't trigger hover on tap on iOS
        @media (hover: hover) and (pointer: fine), (-ms-high-contrast: none), (-ms-high-contrast: active) {
            &:hover {
                color: $dark-blue-2;

                .checkmark {
                    border-color: $red-2;
                }
            }
        }

        .checkmark {
            display: flex;
            border-radius: 50%;
            align-items: center;
            justify-content: center;

            &:after {
                width: 6px;
                height: 6px;
                border-radius: 50%;
                background-image: none;
                background-color: $red-5;
            }
        }
    }
}

